--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ h2 {
 
 img {
     border-radius: 10px 10px 0 0;
-    filter: invert(10%) sepia(50%) saturate(500%) hue-rotate(240deg) brightness(70%);
+    mix-blend-mode: multiply;
     opacity: 0.7;
     width: 100%;
 }
@@ -42,6 +42,10 @@ span {
     border-radius: 10px;
     width: 300px;
     height: 750px;
+}
+
+.business-img {
+    background-color: var(--soft-violet);
 }
 
 .card-text {
